some code redundancy removed

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       </div>
       <!-- No Search Result Found Warning Section End -->
       <!-- Error Text Section -->
-      <h2 id="error-text" class="warning-text mt-2 text-center d-none align-self-center"></h2>
+      <h2 id="error-text" class="warning-text mt-2 text-center d-none align-self-center">Something went wrong</h2>
       <!-- Meals Will Be Added In The Section Below -->
       <div id="meals" class="py-5" onClick="showFoodDetails(event)"></div>
     </section>
